# cookbook_api

./: .dockerignore  Cargo.toml  Dockerfile  README.md  bacon.toml  docker-compose.yml
sql/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
src/: main.rs
src/_tests/: model_chef.rs  model_db.rs  model_recipe.rs  web_chef.rs  web_recipe.rs
src/entities/: chef.rs  mod.rs  prelude.rs  recipe.rs
src/model/: chef.rs  db.rs  mod.rs  recipe.rs
src/security/: mod.rs
src/utils/: mod.rs  scraping.rs
src/web/: chef.rs  filter_auth.rs  filter_utils.rs  mod.rs  recipe.rs  scrape_utils.rs
web-folder/: index.html
