[package]
name = "digital_cookbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.11.1", features = [ "runtime-tokio-rustls", "postgres-array", "sqlx-postgres"]}
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
warp = "0.3.3"
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.16.0"
regex = "1"


# JSON libs
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

#DB libs
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "postgres"] }
urlencoding = "2.1.2"
anyhow = "1"
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"

[dev-dependencies]
anyhow = "1"
